[frontend] Fix alignment of header on mobile view

--- a/frontend/src/components/Header/index.css
+++ b/frontend/src/components/Header/index.css
@@ -34,14 +34,16 @@ header {
       grid-template-columns: 1fr auto 1fr;
       grid-template-rows: repeat(2, auto);
       grid-template-areas:
-        "menu names ."
+        "menu-button names ."
         ". date .";
+      row-gap: 0;
+      padding-bottom: 10px;
     }
 
     padding: 5px 0 0;
 
     .menu-button {
-      grid-area: menu;
+      grid-area: menu-button;
 
       display: flex;
 
@@ -67,6 +69,8 @@ header {
       text-align: center;
 
       @media only screen and (max-width: 768px) {
+        align-self: center;
+
         font-size: 1.75rem;
       }
 
